fixing mobile overflow

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,7 +121,7 @@ aside li {
   transition: opacity 400ms;
   visibility: hidden;
   z-index: 10;
-  width: 100%!important;
+  width: 100% !important;
 }
 
 .overlay .close-outside {
@@ -133,7 +133,6 @@ aside li {
   position: absolute;
   top: 0;
   width: calc(100% - var(--aside-width));
- 
 }
 
 .overlay .light {
@@ -558,4 +557,18 @@ button.reset:hover:not(:has(> *)) {
 /* Enable animation */
 .enable-animation .marquee__content {
   animation: scroll 10s linear infinite;
+}
+
+/*Swipper breakpoints*/
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+
+@media screen and (min-width: 1024px) {
+  .swiper-container {
+    width: 1024px;
+  }
 }
